# infrastructure-automation

./: .dockerignore  .gitignore  CLAUDE.md  README.md  infrastructure-platform-guide.md  send-test-message.ps1  test-request.json
.claude/: settings.local.json
api/: function_app.py  requirements.txt
app-infrastructure/: README.md
cli/: README.md  infra_cli.py  pyproject.toml  resource_catalog.py  setup.py
config/: sizing-defaults.yaml
docs/: ARCHITECTURE.md  LOCAL-K8S-SETUP.md  MCP_ANALYZER_BUG_REPORT.md  MCP_WORKFLOW_IMPROVEMENTS.md  YAML-CONFIG-REFERENCE.md  branch-per-environment-strategy.md  internal-developer-platform-control-plane-guide.md  module-versioning.md  versioning-strategy.md
examples/: data-pipeline.yaml  free-tier-app.yaml  keyvault-pattern.yaml  microservices.yaml  multi-pattern.yaml  web-app-stack.yaml
mcp-server/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  vite.config.ts
mcp-server/src/: index.ts  patterns.generated.json  server.py  server.ts
mcp-server/src/auth/: provider.py
mcp-server/src/github/: client.py
mcp-server/src/patterns/: loader.py  resolver.py
mcp-server/src/tools/: _push.py  patterns.py  provision.py  status.py  tfvars.py
mcp-server/ui/: pattern-generator.html
mcp-server/ui/src/: pattern-generator.ts
runners/: Dockerfile  runner-deployment.yaml
schemas/: infrastructure.yaml.json
scripts/: cleanup-stuck-requests.sh  cleanup.sh  create-release.sh  deploy-platform.sh  generate-portal-data.py  generate-schema.py  purge-keyvaults.sh  resolve-pattern.py  (+1 more)
(+383 files in other folders)
